--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
         "commands": [
             {
                 "match": ".Rnw",
-                "cmd": "R.exe -e 'knitr::knit(r\"{${file}}\")' && .\\tectonic \".\\${fileBasenameNoExt}.tex\""
+                "cmd": "R.exe -e 'knitr::knit(r\"{${file}}\", encoding=\"UTF-8\")' && .\\tectonic \".\\${fileBasenameNoExt}.tex\""
             }
         ]
     },
